fixed the extra space on the footer

--- a/src/App.css
+++ b/src/App.css
@@ -492,14 +492,19 @@ textarea {
 
 } */
 
-.text-center{ 
+.footer-text-center{ 
   background-color:#000000;
   color:rgb(248, 245, 245);
-  padding: '20px 0' ;
-  /* margin:100px; */
+  padding:15px;
+  height:50px;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+
+  margin-top: 110px;
   
 }
-
-.text-center .text-muted new{
+/* 
+ .footer-text-muted {
   color:white;
-}
+} */
